[package]
name = "polycrystal"
description = "Barebones \"automatic\" Flatpak installer for distribution-default Flatpak packages."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
color-eyre = "0.6.3"
itertools = "0.13.0"
libflatpak = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
fs4 = { version = "0.11", features = ["sync"] }
